# karl-systems-challenge

./: .env.test  .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.sqlx/: query-11c8f9bad9878f0e7f9ea6250d62145d212f599c3259c98b09bd0da46dc7d875.json  query-1a5a25862b5b5d26d8eefb78a3741911587c42caa84e2187f3ff6f094600cf5d.json  query-23ae921f6648daf3f9add8bd3abd3bbcd7babc0d793f3f1f5572b54c5b5846a8.json  query-25724e85b26b08e67ba84ddfe6e9ec8eb4c0256461ce8c3727e74b4bd960fa00.json  query-33362abf7535f4874a06a91b3d02a37586c19cd9c249dfc8543027c327bfea0a.json  query-385962f000eb81cba83e575d4b4f842303cb5377a51f252d5d8c38c658b005f3.json  query-7110f2c67a7e93d59b67491d0d403022a4152650627163499e62a7280b639b46.json  query-94916ac81e437a0afe1b91947b59fc8a6a6ceb35d9f17b3f361eba4b7a566f67.json  query-9e2f772c321330a51acebb0a9b412b9cd101bcdd8804296b5229a564dd1f8445.json  query-a3a31ace10c60bf2233bb4b69914fc41ab9211e65066d8ec507d1787b7f63a1d.json  query-a589565b2f026e8b9a87af9955d2dd11997802e867fb2693d5c1027c87b61497.json  query-aab3db8ca9f40cea90925ccab9574f093162394157bd62a88ed33f2085deb309.json  query-bce89d16ec373442cbbc4cf3dc7427e24440b2fad12c8547ec109efd31f1d8ae.json  query-c4255c1fdbd85e7e839ffaea426d05736d90547e3e5bb74605f1a006d9eb3c2e.json  query-d32410db950492e107c1b8445fa2ea8837c2562776ab6f86720e1b635f8267e8.json  query-de1a52c6990a9fc836ca3a685122835116f5ab1c2312d7dbc184fda6251438e5.json  query-f46a77f5daab1a5194487be88ac3cb326849c1f4b607492ddae76e50212f4ea8.json
auth-service/: Cargo.toml  Dockerfile
auth-service/migrations/: 20240101000001_create_users.sql  20240101000002_create_roles.sql  20240101000003_create_permissions.sql  20240101000004_create_user_roles.sql  20240101000005_create_role_permissions.sql  20240101000006_seed_default_roles_permissions.sql  20240101000007_add_performance_indexes.sql  20240101000008_add_not_null_constraints.sql
auth-service/src/: config.rs  lib.rs  main.rs
auth-service/src/db/: mod.rs  pool.rs
auth-service/src/handlers/: admin.rs  auth.rs  mod.rs
auth-service/src/middleware/: admin.rs  auth.rs  mod.rs
auth-service/src/models/: mod.rs  permission.rs  user.rs
auth-service/src/services/: jwt.rs  mod.rs  password.rs
auth-service/tests/: integration_test.rs
shared/: Cargo.toml
shared/src/: errors.rs  jwt.rs  lib.rs  middleware.rs  types.rs
tests/: e2e_test.rs
time-service/: Cargo.toml  Dockerfile
time-service/src/: config.rs  lib.rs  main.rs
time-service/src/cache/: mod.rs  timezone.rs
time-service/src/handlers/: time.rs
time-service/src/middleware/: jwt.rs  mod.rs  permission.rs
time-service/src/services/: mod.rs  worldtime.rs
time-service/tests/: integration_test.rs
weather-service/: Cargo.toml  Dockerfile
weather-service/src/: config.rs  lib.rs  main.rs
weather-service/src/cache/: mod.rs  weather.rs
weather-service/src/handlers/: mod.rs  weather.rs
weather-service/src/middleware/: jwt.rs  mod.rs
weather-service/src/services/: aggregator.rs  mod.rs  rate_limiter.rs
weather-service/src/services/providers/: metaweather.rs  mod.rs  openmeteo.rs  wttrin.rs
weather-service/tests/: integration_test.rs
