[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

