[package]
name = "weather-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "weather-service"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

